style.css
body {
  display: flex;
  flex-direction: column;
  margin: 0;
  box-sizing: border-box;
}

.top-container {
  display: flex;
  flex-direction: column;
  background-color: #1f2937;
}

.header {
  display: flex;
  align-items: baseline;
  padding-top: 10px;
  justify-content: center;
}

.hero-container {
  display: flex;
  margin: 60px 0px;
  justify-content: center;
  flex-wrap: wrap-reverse;
  align-items: center;
}

.hero-text-container {
  display: flex;
  flex-direction: column;
  width: 400px;
  flex-shrink: 0;
  margin-right: 25px;
}

.image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: grey;
  color: #E5E7EB;
  width: 450px;
  height: 204px;
  flex-shrink: 0;
}

.hero-main-text {
  font-size: 48px;
  font-weight: 800;
  color: #F9FAF8;
}

.hero-secondary-text {
  font-size: 18px;
  color: #E5E7EB;
}

.logo {
  font-size: 24px;
  color: #F9FAF8;
  margin-right: 370px;
}

ul {
  display: flex;
  padding: 0;
  margin: 0px;
  list-style-type: none;
  gap: 18px;
}

a {
  text-decoration: none;
  font-size: 18px;
  color: #E5E7EB
}

p {
  margin: 0px;
 }

.info-content-child p {
  margin: 0px;
  width: 145px;
  text-align: center;
}

button {
  width: 115px;
  padding: 4px;
  margin-top: 8px;
  background-color: #3882F6;
  color: #E5E7EB;
  border: 0;
  border-radius: 5px;
}

.info-header {
  font-size: 36px;
  font-weight: 800;
  color: #1f2937;
  margin: 20px auto;
}

.info-image {
  width: 150px;
  height: 150px;
  border: 2px solid #3882F6;
  border-radius: 10px;
}

.info-content-parent {
  display: flex;
  justify-content: center;
  gap: 50px;
  flex-wrap: wrap;
}

.info-main-container {
  display: flex;
  align-content: center;
  flex-direction: column;
  margin-bottom: 75px;
}

.quote-container {
  display: flex;
  background-color: #E5E7EB;
}

.quote-container p {
  font-size: 36px;
  font-weight:300;
  font-style: italic;
  color: #1f2937;
}

